Polish the markdown a little

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,14 @@
    "source": [
     "# RAG using OpenAI LLM\n",
     "\n",
-    "Source: [Vipra Singh](<https://medium.com/@vipra_singh/building-llm-applications-introduction-part-1-1c90294b155b#4d28>)"
+    "Source: \n",
+    "1. [Vipra Singh](<https://medium.com/@vipra_singh/building-llm-applications-introduction-part-1-1c90294b155b#4d28>)\n",
+    "2. [brightinventions](<https://brightinventions.pl/blog/build-llm-application-with-rag-langchain/>)\n",
+    "3. [LangChain RAG](<https://python.langchain.com/v0.2/docs/tutorials/rag/#built-in-chains>)\n",
+    "4. [SBERT.net](<sbert.net>)\n",
+    "\n",
+    "* Only work on 1 single `.txt` file at a time for now\n",
+    "* Used a randomly generated story from **ChatGPT**, you could most likely use any: Just change `file_name` to match your new file's name.\n"
    ]
   },
   {
@@ -19,7 +26,16 @@
     "3. `OpenAI`: For LLM\n",
     "4. `Langchain`: For chaining prompts and LLM\n",
     "5. `LlamaIndex`: For indexing\n",
-    "6. `FAISS`: For vector storage and retrieval"
+    "6. `FAISS`: For vector storage and retrieval\n",
+    "\n",
+    "No `LlamaIndex` yet as of this one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading environment's variables"
    ]
   },
   {
@@ -600,6 +616,42 @@
     "query = \"What do you think happen immediately after the end of the story?\"\n",
     "response = retrieval_chain.invoke({'input': query})\n",
     "print(response['answer'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion and Future Possibility\n",
+    "\n",
+    "Right now, our RAG isn't able to complicately infer or come up with something new from the existing story.\n",
+    "\n",
+    "Possible TODO:\n",
+    "1. History\n",
+    "2. Chatbot\n",
+    "3. Streamlit\n",
+    "4. Better embeddings and retrieval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Citation\n",
+    "\n",
+    "```bibtex\n",
+    "@inproceedings{thakur-2020-AugSBERT,\n",
+    "  title = \"Augmented {SBERT}: Data Augmentation Method for Improving Bi-Encoders for Pairwise Sentence Scoring Tasks\",\n",
+    "  author = \"Thakur, Nandan and Reimers, Nils and Daxenberger, Johannes  and Gurevych, Iryna\",\n",
+    "  booktitle = \"Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies\",\n",
+    "  month = jun,\n",
+    "  year = \"2021\",\n",
+    "  address = \"Online\",\n",
+    "  publisher = \"Association for Computational Linguistics\",\n",
+    "  url = \"https://www.aclweb.org/anthology/2021.naacl-main.28\",\n",
+    "  pages = \"296--310\",\n",
+    "}\n",
+    "```"
    ]
   }
  ],
